--- a/Changes
+++ b/Changes
@@ -1,4 +1,12 @@
 Revision history for ElasticSearch::SearchBuilder
+
+0.19    2013-12-14
+        Support for score_type in has_child/has_parent,
+        and constant_score query - thanks to jegade
+
+        Removed docs/ folder which made installation on Windows fail.
+
+
 0.18    2012-11-25
         BREAKING CHANGE:
         The and/or/not logic in queries was being merged incorrectly into
