--- a/README
+++ b/README
@@ -49,7 +49,7 @@ SYNOPSIS
 
 METHODS
   new()
-        my $sb = ElastiSearch::SearchBuilder->new()
+        my $sb = ElasticSearch::SearchBuilder->new()
 
     Creates a new instance of the SearchBuilder - takes no parameters.
 
@@ -1231,6 +1231,7 @@ PARENT/CHILD
                 query  => { tag => 'perl' },
                 _scope => 'my_scope',
                 boost  => 1,                    # Query context only
+                score_type => 'max'             # Query context only
             }
         }
 
@@ -1250,7 +1251,8 @@ PARENT/CHILD
                 query  => { tag => 'perl' },
                 _scope => 'my_scope',
                 boost  => 1,                    # Query context only
-            }
+                score_type => 'max'             # Query context only
+             }
         }
 
     See Has Child Query
